--- a/package.json
+++ b/package.json
@@ -6,30 +6,33 @@
     "url": "https://github.com/sortigoza/clojurets.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.21.3",
     "@babel/eslint-parser": "^7.19.1",
-    "@types/jest": "^28.1.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@jest/globals": "^29.5.0",
+    "@types/jest": "^28.1.8",
     "@types/jsonfile": "^6.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "babel-jest": "^29.5.0",
     "browserify": "17.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-literal-checker": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "less": "4.1.3",
-    "mocha": "10.2.0",
+    "jest": "^29.5.0",
     "prettier": "^2.0.5",
-    "should": "13.2.3",
-    "sinon": "15.0.1",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsify": "^5.0.4",
-    "typescript": "^4.7.4",
-    "uglify-js": "3.17.4",
-    "chai": "^4.3.7"
+    "typescript": "^4.9.5",
+    "uglify-js": "3.17.4"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha.js test/*",
+    "jest": "jest --watch",
+    "test": "jest",
     "build": "./node_modules/browserify/bin/cmd.js src/clojure -p tsify | ./node_modules/uglify-js/bin/uglifyjs -c > clojure.min.js",
     "fmt": "./node_modules/prettier/bin-prettier.js -w .",
     "lint": "./node_modules/eslint/bin/eslint.js src"
