--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "jest": "./node_modules/jest/bin/jest.js --watch",
-    "test": "./node_modules/jest/bin/jest.js",
+    "test": "./node_modules/jest/bin/jest.js --coverage",
     "build": "./node_modules/tsup/dist/cli-node.js src/clojure.ts --format iife,esm --target esnext",
     "fmt": "./node_modules/prettier/bin-prettier.js -w .",
     "lint": "./node_modules/eslint/bin/eslint.js src"
